# presence-bridge

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  publish-package-indexes.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  model.rs  urls.rs
crates/discord_rpc/: Cargo.toml
crates/discord_rpc/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/macos/: jxa_now_playing.js
crates/providers/src/: lib.rs  macos.rs  mpris.rs  windows.rs
packaging/homebrew/: presence-bridge.rb.tmpl
packaging/linux/: presence-bridge.service
packaging/scoop/: presence-bridge.json.tmpl
scripts/: update-homebrew-formula.sh  update-scoop-manifest.sh
