[workspace]
members = [
  "crates/core",
  "crates/providers",
  "crates/engine",
  "crates/discord_rpc",
  "crates/app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["presence-bridge contributors"]
repository = "https://github.com/your-org/presence-bridge"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "process", "net", "io-util", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
