[package]
name = "presence-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
presence-bridge-core = { path = "../core" }
presence-bridge-discord-rpc = { path = "../discord_rpc" }
presence-bridge-engine = { path = "../engine" }
presence-bridge-providers = { path = "../providers" }
dirs = "6"
