[package]
name = "presence-bridge-discord-rpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.24"
tracing.workspace = true
url.workspace = true
presence-bridge-engine = { path = "../engine" }
