[package]
name = "presence-bridge-providers"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
presence-bridge-core = { path = "../core" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = [
  "Foundation",
  "Media_Control",
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"
zvariant = "4"
